Add a JSON accessable documentation website

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,5 +1,12 @@
 ---
 permalink: index.html
+date: 2000-01-01
 ---
 
-<meta http-equiv="refresh" content="0; url=index.json" />
+<h1>ls.terminal.ink documentation service</h1>
+<ul>
+  <li><code>/index.json</code> - View 10 latest posts</li>
+  <li><code>/all.json</code> - View all posts</li>
+</ul>
+
+<a href="https://discordapps.dev/">View on Discord Apps Marketplace for markup</a>
